--- a/config.env
+++ b/config.env
@@ -1,11 +1,11 @@
 #Required Vars
-BOT_TOKEN = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
-FSUB_ID = ""
-DUMP_CHAT_ID = ""
-DATABASE_URL = ""
+BOT_TOKEN = "8045964292:AAE7nlvnIn9ItXrvDJv6NvnTARaiowrhWUo"
+TELEGRAM_API = "23241238"
+TELEGRAM_HASH = "e6ff6e3068dbea75500865ac49c3608f"
+FSUB_ID = "-1002465106758"
+DUMP_CHAT_ID = "-1002514513728"
+DATABASE_URL = "mongodb+srv://seyov22189:seyov22189@cluster0.rttekkf.mongodb.net/?retryWrites=true&w=majority"
+SHORTENER_API = "1363e5dd5ec8084dd9df83fcb53d436870c93cf1"
 
 #Optional
 USER_SESSION_STRING = ""
-SHORTENER_API = ""
