--- a/config.env
+++ b/config.env
@@ -1,10 +1,10 @@
 #Required Vars
-BOT_TOKEN = "7499704303:AAFHys5pYUrjmQAYvHY1qIMVGQgbDgOC7ZQ"
-TELEGRAM_API = "23241238"
-TELEGRAM_HASH = "e6ff6e3068dbea75500865ac49c3608f"
-FSUB_ID = "-1002465106758"
-DUMP_CHAT_ID = "-1002514513728"
-DATABASE_URL = "mongodb+srv://seyov22189:seyov22189@cluster0.rttekkf.mongodb.net/?retryWrites=true&w=majority"
+BOT_TOKEN = "7751917010:AAF25PK26tIFrveqMBYbi4nWrZeDN_tlbJU"
+TELEGRAM_API = "15529802"
+TELEGRAM_HASH = "92bcb6aa798a6f1feadbc917fccb54d3"
+FSUB_ID = "-1001542373688"
+DUMP_CHAT_ID = "-1002312629309"
+DATABASE_URL = "mongodb+srv://YKDB04:YKDB04@cluster0.b0fk0.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 SHORTENER_API = "9146bccc2607564965e8d23d70b9cf7a1e200b71"
 
 #Optional
